monitoring/base/kube-promehteus-stack/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-grafana-ingressroute
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.plutolab.live`)
      kind: Rule
      services:
        - name: kube-prometheus-grafana
          port: 80
    - match: Host(`prometheus.plutolab.live`)
      kind: Rule
      services:
        - name: kube-prometheus-kube-prome-prometheus
          port: 9090
